# notarius-korneenkova

./: .cursorignore  .gitignore  .railwayignore  BACKGROUND_MEDIA_GUIDE.md  BLOG_INTEGRATION.md  CHANGELOG_FIXES.md  DATABASE_OPTIMIZATION.md  INTEGRATION_PROGRESS.md  INTEGRATION_STATUS.md  JSON_LD_IMPLEMENTATION.md  MIGRATION_FIX.md  MISSING_CONNECTIONS.md  PROJECT_ANALYSIS.md  REVIEWS_SYSTEM.md  REVIEW_IMPLEMENTATION_SUMMARY.md  SETUP_GUIDE.md  TZ.docx  VIDEO_CHECKLIST.md  VIDEO_GUIDE.md  api_final.json  api_response.json  api_response_fixed.json  package-lock.json  package.json  requirements.txt  ІНСТРУКЦІЯ.md  ФІНАЛЬНИЙ_ЗВІТ.md  ЩО_ЗМІНИЛОСЯ.md
backend/: .railwayignore  ADMIN_FINAL_FIXES.md  ADMIN_FIXES.md  ADMIN_IMPROVEMENTS.md  BLOG_MODELS_RESTORED.md  CUSTOM_FORMS_GROUP.md  EDITABLE_STATUS_FIX.md  ENV_SETUP.md  FORMS_ADMIN_SUMMARY.md  Procfile  change_admin_password.py  check_admin.py  check_categories.py  check_config.py  create_superuser.py  db.sqlite3  nixpacks.toml  pyproject.toml  railway.json  requirements.txt  service_categories_test.json  service_category.json  service_category_test.json  service_category_utf8.json  start.sh  test_service_category_api.py
backend/backend/: ckeditor_config.py  env_O.md  settings.py  urls.py
backend/backend/search/: __init__.py  urls.py  views.py
backend/blog/: admin.py  apps.py  blog_seo.py  models.py  serializers.py  signals.py  urls.py  views.py
backend/main_page/: __init__.py  admin.py  apps.py  models.py  seo.py  serializer.py  signals.py  sitemap_generator.py  urls.py  utils.py  views.py
(+341 files in other folders)
