[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "notarius-backend"
version = "0.1.0"
dependencies = [
    "Django==5.0.14",
    "djangorestframework==3.16.1",
    "django-cors-headers==4.3.1",
    "psycopg2-binary==2.9.9",
    "python-dotenv==1.0.0",
    "gunicorn==21.2.0",
    "whitenoise==6.6.0",
]